--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -452,3 +452,17 @@ background: #fd3344 none repeat scroll 0 0;
 .padding-20{
   padding: 20px;
 }
+.setting-menu{
+    list-style: none;
+    width: 100%;
+    cursor: pointer;
+}
+.setting-menu li{
+    padding: 5px 20px;
+}
+.setting-menu li.active{
+    background: #bbb;
+}
+.yeboa-15x{
+    font-size: 1.5em;
+}
