--- a/stylesheets/style.css
+++ b/stylesheets/style.css
@@ -28,7 +28,7 @@ p {
 
 /* line 10, ../sass/style.scss */
 .price {
-  font-size: 30px;
+  font-size: 20px;
   margin: 0 auto;
   color: #333;
 }
@@ -465,4 +465,24 @@ background: #fd3344 none repeat scroll 0 0;
 }
 .yeboa-15x{
     font-size: 1.5em;
+}
+.settings-info-box {
+    min-height: 75px;
+    margin-bottom: 30px;
+    padding:0 20px;
+    color: white;
+    -webkit-box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.35), 0 3px 1px -1px rgba(0, 0, 0, 0.1);
+    -moz-box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.35), 0 3px 1px -1px rgba(0, 0, 0, 0.1);
+    box-shadow: inset 0 0 1px 1px rgba(255, 255, 255, 0.35), 0 3px 1px -1px rgba(0, 0, 0, 0.1);
+}
+.settings-info-box .count {
+    font-size: 34px;
+    font-weight: 700;
+}settings.info-box .title {
+    font-size: 12px;
+    text-transform: uppercase;
+    font-weight: 600;
+}  
+.bg-grey{
+    background: #ccc;
 }
